=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.016 - Under Development

=over

=item *

Modified Krang::Contrib::deserialize_xml() to create contributor types
as needed.  [Sam]

=item *

Changed Krang::ElementClass::Date to store and load data in XML using
an ISO-8601 date-time format. Also added missing template_data()
method.  [Sam]

=item *

Added support for Debian. [Jason Purdy]

=item *

Fixed bug where clicking on a media link in the element editor would
open a new window every time. [Sam]

=item *

Moved code to run tests from Makefile into bin/krang_test.  This
allows krang_install to affect which Perl binary runs the tests. It
also helps with BSD portability since the test target didn't work with
BSD make. [Sam]

=back

=head2 v1.015 - April 8, 2004

=over

=item *

Added a message to remind users that they must create a site before
adding stories, media or templates. [Sam]

=item *

Added initial support for FreeBSD!  Currently it only supports FreeBSD
5.2.1 with GNU make (gmake) installed, as that was the only available
testable environment.  Would be nice if someone with more experience
in BSD Makefiles could get Krang's Makefiles to work with BSD make.
There should be nothing keeping Krang from working with earlier
versions of FreeBSD, but that will require someone to pick up the BSD
ball and run with it.  [Peter]

=item *

Fixed site editor to check that URLs don't have paths attached to them
and that paths are obsolute. [Sam]

=item *

Fixed krang_upgrade to use Krang::Platform.  Added a new method to
Krang::Platform, post_upgrade_message(). [Sam]

=item *

Upgraded XML-Writer, HTML-Parser, and Tar-Archive to get rid of warnings.
[Perrin]

=item *

Upgraded mod_perl and apache to latest releases. [Perrin]

=item *

Fixed the behavior of Krang::Publisher->preview_story().  Following
the original spec, it now writes the story out to all categories in